--- a/projeto-pagina-estatica/styles/style.css
+++ b/projeto-pagina-estatica/styles/style.css
@@ -3,3 +3,15 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+h1,
+h2,
+h3,
+h4,
+a {
+  font-family: "Poppins";
+}
+
+p {
+  font-family: "Roboto";
+}
