--- a/projeto-pagina-estatica/styles/style.css
+++ b/projeto-pagina-estatica/styles/style.css
@@ -8,10 +8,53 @@ h1,
 h2,
 h3,
 h4,
-a {
+a,
+button {
   font-family: "Poppins";
 }
 
-p {
+p,
+input,
+select,
+textarea {
   font-family: "Roboto";
+}
+body {
+  background-color: #f7f7f7;
+}
+header {
+  background-color: #fff;
+  height: 80px;
+}
+header #navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  height: 80px;
+}
+
+header #navbar .nav-brand {
+  text-decoration: none;
+  font-size: 1.5rem;
+  font-weight: 700;
+  color: #333;
+}
+header #navbar .nav-list {
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 2rem;
+}
+header #navbar .nav-list .nav-item a {
+  text-decoration: none;
+  color: #333;
+  font-size: 20px;
+  font-weight: 500;
+}
+header #navbar .nav-list .nav-item a:hover {
+  color: #777;
+  transition: color 0.3s;
 }
