--- a/projeto-pagina-estatica/styles/style.css
+++ b/projeto-pagina-estatica/styles/style.css
@@ -62,3 +62,19 @@ header #navbar .nav-list .nav-item a:hover {
 }
 
 /* SECTION BANNER */
+
+main {
+  margin-top: 6rem;
+}
+
+main #banner {
+  display: flex;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 40px;
+  padding: 0 2rem;
+}
+main #banner .banner-content .banner-content-title {
+  font-size: 44px;
+  font-weight: 700;
+}
