--- a/projeto-pagina-estatica/styles/style.css
+++ b/projeto-pagina-estatica/styles/style.css
@@ -33,7 +33,7 @@ header #navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 2rem;
+  padding: 0 4rem;
   max-width: 1200px;
   margin: 0 auto;
   height: 80px;
@@ -41,7 +41,7 @@ header #navbar {
 
 header #navbar .nav-brand {
   text-decoration: none;
-  font-size: 1.5rem;
+  font-size: 1.8rem;
   font-weight: 700;
   color: #333;
 }
@@ -54,7 +54,7 @@ header #navbar .nav-list {
 header #navbar .nav-list .nav-item a {
   text-decoration: none;
   color: #333;
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
 }
 header #navbar .nav-list .nav-item a:hover {
@@ -76,7 +76,8 @@ main #banner {
   padding: 0 4rem;
 }
 main #banner .banner-content .banner-content-title {
-  font-size: 44px;
+  font-size: 48px;
+  line-height: 1.3;
   font-weight: 700;
 }
 span {
@@ -84,7 +85,9 @@ span {
 }
 
 main .banner-content p {
-  margin: 40px 0;
+  margin: 30px 0;
+  line-height: 1.3;
+  font-size: 16px;
 }
 main button {
   padding: 10px 20px;
@@ -93,6 +96,7 @@ main button {
   border-radius: 4px;
   cursor: pointer;
   color: white;
+  font-weight: 600;
 }
 main button:hover {
   background-color: #398;
