--- a/html-css/projeto-pagina-estatica/styles/style.css
+++ b/html-css/projeto-pagina-estatica/styles/style.css
@@ -65,7 +65,7 @@ header #navbar .nav-list .nav-item a:hover {
 /* SECTION BANNER */
 
 main {
-  margin-top: 4rem;
+  margin-top: 2em;
 }
 
 main #banner {
