--- a/html-css/projeto-pagina-estatica/styles/style.css
+++ b/html-css/projeto-pagina-estatica/styles/style.css
@@ -79,6 +79,7 @@ main #banner .banner-content .banner-content-title {
   font-size: 48px;
   line-height: 1.3;
   font-weight: 700;
+  margin-top: 7rem;
 }
 span {
   color: #396;
