--- a/html-css/projeto-pagina-estatica/styles/style.css
+++ b/html-css/projeto-pagina-estatica/styles/style.css
@@ -106,3 +106,9 @@ main button:hover {
 main img {
   border-radius: 4px;
 }
+
+footer {
+  text-align: center;
+  padding: 2rem;
+  margin: 2rem 0;
+}
