--- a/html-css/projeto-pagina-estatica/styles/style.css
+++ b/html-css/projeto-pagina-estatica/styles/style.css
@@ -1,29 +1,4 @@
-/* RESET */
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-h1,
-h2,
-h3,
-h4,
-a,
-button {
-  font-family: "Poppins";
-}
-
-p,
-input,
-select,
-textarea {
-  font-family: "Roboto";
-}
-body {
-  background-color: #070707;
-  color: white;
-}
+@import url("./global.css");
 /* HEADER */
 header {
   background-color: #fff;
