--- a/html-css/projeto-pagina-estatica/styles/main.css
+++ b/html-css/projeto-pagina-estatica/styles/main.css
@@ -1,36 +1,42 @@
-header {
-  background-color: #fff;
-  height: 80px;
-}
-header #navbar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 0 4rem;
-  max-width: 1200px;
-  margin: 0 auto;
-  height: 80px;
+main {
+  margin-top: 2em;
 }
 
-header #navbar .nav-brand {
-  text-decoration: none;
-  font-size: 1.8rem;
-  font-weight: 700;
-  color: #333;
-}
-header #navbar .nav-list {
-  list-style: none;
+main #banner {
   display: flex;
-  align-items: center;
-  gap: 2rem;
+  max-width: 1200px;
+  margin: 0 auto;
+  gap: 100px;
+  padding: 0 4rem;
 }
-header #navbar .nav-list .nav-item a {
-  text-decoration: none;
-  color: #333;
-  font-size: 18px;
-  font-weight: 500;
+main #banner .banner-content .banner-content-title {
+  font-size: 48px;
+  line-height: 1.3;
+  font-weight: 700;
+  margin-top: 6rem;
 }
-header #navbar .nav-list .nav-item a:hover {
-  color: #777;
-  transition: color 0.3s;
+span {
+  color: #396;
+}
+
+main .banner-content p {
+  margin: 30px 0;
+  line-height: 1.3;
+  font-size: 16px;
+}
+main button {
+  padding: 10px 20px;
+  background-color: #396;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  color: white;
+  font-weight: 600;
+}
+main button:hover {
+  background-color: #398;
+  transition: color 0.5s;
+}
+main img {
+  border-radius: 4px;
 }
